--- a/src/style/MeuStyle.css
+++ b/src/style/MeuStyle.css
@@ -19,3 +19,19 @@
     background-color: #2e66ff;
     height: 10px;
 }
+/* Parte de Cadastro/Login */
+#pageCadastro{
+    background: #f2f2f2;
+}
+#cadastro{
+    border-right: 3px solid #eb8f1e;
+}
+
+#test{
+    border: 3px solid #eb8f1e;
+    padding: 15px;
+}
+footer{
+    text-align: center;
+    margin: 0 auto;
+}
