--- a/src/style/MeuStyle.css
+++ b/src/style/MeuStyle.css
@@ -43,6 +43,7 @@ header, body {
 
 /* Parte de Cadastro/Login */
 #pageCadastro{
+    font-family: 'Staatliches', cursive;
     background: #f2f2f2;
 }
 #cadastro{
@@ -57,3 +58,4 @@ footer{
     text-align: center;
     margin: 0 auto;
 }
+
