Adding the products page

--- a/src/style/MeuStyle.css
+++ b/src/style/MeuStyle.css
@@ -46,12 +46,13 @@ header, body {
     background: #f2f2f2;
 }
 #cadastro{
-    border-right: 3px solid #eb8f1e;
+    border-right: 3px solid #ff9b21;
 }
 
 #test{
     border: 3px solid #eb8f1e;
     padding: 15px;
+    border-radius: 10px;
 }
 footer{
     text-align: center;
